--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -65,4 +65,4 @@ jobs:
         run: python --version
 
       - name: Run Pylint
-        run: pylint your_python_file.py # Replace "your_python_file.py" with the actual file name or pattern you want to check`
+        run: pylint app.py # Replace "your_python_file.py" with the actual file name or pattern you want to check`
