--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: 3.11 # Specify the Python version you want to use (e.g., 3.6, 3.7, 3.8)
+          python-version: 3.11
 
       - name: Create virtual environment
         run: python -m venv venv
@@ -35,7 +35,7 @@ jobs:
         run: source venv/bin/activate
 
       - name: Install dependencies
-        run: pip install Flask pylint
+        run: pip install -r requirements.txt
 
       - name: Check Python version
         run: python --version
@@ -50,7 +50,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: 3.11 # Specify the Python version you want to use (e.g., 3.6, 3.7, 3.8)
+          python-version: 3.11
 
       - name: Create virtual environment
         run: python -m venv venv
@@ -59,10 +59,7 @@ jobs:
         run: source venv/bin/activate
 
       - name: Install dependencies
-        run: pip install Flask pylint
-
-      - name: Check Python version
-        run: python --version
+        run: pip install -r requirements.txt
 
       - name: Run Pylint
         run: pylint app.py # Replace "your_python_file.py" with the actual file name or pattern you want to check`
