--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -15,7 +15,6 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   setup-and-test:
     runs-on: ubuntu-latest
 
@@ -62,4 +61,4 @@ jobs:
         run: pip install -r requirements.txt
 
       - name: Run Pylint
-        run: pylint app.py # Replace "your_python_file.py" with the actual file name or pattern you want to check`
+        run: pylint app.py
