--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -63,5 +63,11 @@ jobs:
       - name: Run Pylint
         run: pylint app.py
 
+      - name: Start Flask server
+        run: |
+          export FLASK_APP=app.py 
+          export FLASK_ENV=production
+          flask run --host=0.0.0.0 --port=5000
+
       - name: Run App
         run: python app.py
