--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -67,7 +67,4 @@ jobs:
         run: |
           export FLASK_APP=app.py 
           export FLASK_ENV=production
-          flask run --host=0.0.0.0 --port=5000
-
-      - name: Run App
-        run: python app.py
+          timeout 2m flask run --host=0.0.0.0 --port=5000
