--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -67,4 +67,4 @@ jobs:
         run: |
           export FLASK_APP=app.py 
           export FLASK_ENV=production
-          timeout 2m flask run --host=0.0.0.0 --port=5000
+          flask run --host=0.0.0.0 --port=5000
